# wasm_object_send

./: package-lock.json  package.json  readme.md  tsconfig.json  vite.config.js
object_send_wasm/: Cargo.toml
object_send_wasm/src/: lib.rs
src/: main.ts
src/object_send_wasm/: object_send_wasm.d.ts  object_send_wasm.js  object_send_wasm_bg.wasm  object_send_wasm_bg.wasm.d.ts  package.json  wasm_import.ts
